--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,7 @@
           <!-- Logo -->
           <div class="app-brand justify-content-center mt-5">
             <a href="/" class="app-brand-link gap-3">
-              <img src="../assets/img/logo_maggha_side.png" alt="Logo" class="w-px-200 h-auto" />
+              <img src="/browser/browser/assets/img/logo_maggha_side.png" alt="Logo" class="w-px-200 h-auto" />
             </a>
           </div>
           <!-- /Logo -->
